examples/error/missing_function_call.rx
function string hello() {
  return "str";
}

function void main() {
  print(hello);
}